2001-04-12  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/account-piecharts.scm: Added menu tips, menu
	names. Use Reportname option for report title. Added an explanatory 
	text (only for devel info, will be removed again in some weeks).

2001-04-12  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Transaction.[ch] (xaccSplitGetCorrAccountFullName): new
	functions.  (xaccSplitCompareAccountNames): rename
	to xaccSplitCompareAccountFullNames and compare using full names.
	(xaccSplitCompareOtherAccountNames): renaming as above.

	* src/engine/Query.[ch]: rename sort enumeration values.

	* src/guile/gnc.gwp: update to match above changes.

	* src/scm/report-utilities.scm (gnc:split-get-corr-account-full-name):
	new function.

	* src/scm/report/transaction-report.scm: use above changes to sort
	and optionally display full account names.  Fix unrelated bugs with 
	sorting options.

2001-04-11  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/hello-world.scm: add a menu tip as an example

	* src/scm/report.scm: add menu names and menu tips to reports

2001-04-11  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/average-balance.scm, category-barchart.scm,
	income-expense-graph.scm, net-worth-timeseries.scm, portfolio.scm:
	Added menu-path for reports.

	* src/scm/report/account-piecharts.scm: Report title is now
	fetched from Reportname option. Slices and legend now have
	different URLs.

2001-04-11  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-commodities.c: more work

	* src/engine/gnc-commodity.c (gnc_commodity_table_remove): new func

	* src/engine/gnc-commodity.h: add ASX namespace

	* src/gnome/dialog-commodity.c (gnc_ui_edit_commodity_modal): new
	func. unfinished. rename some functions to reflect that it's also
	an editing dialog now.

2001-04-11  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm (render-month-subheading):
	fix bug.

2001-04-11  Christian Stimming  <stimming@tuhh.de>
