@@ -1,3 +1,9 @@
+2001-04-12  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/dialog-commodity.c: add api to edit commodities
+
+	* src/gnome/dialog-commodities.c: allow commodities to be edited
+
 2001-04-12  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/report/account-piecharts.scm: Added menu tips, menu
